test/positive/feature_boolean.java

public class feature_boolean {
  public feature_boolean() {}
  protected boolean x;
}

