test/negative/feature_privatefields.java

public class feature_privatefields {
  private int x;
  public feature_privatefields() {}
}

